<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/com.hwc.oklib"
    android:id="@+id/activity_forget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:onClick="back"
        android:padding="10dp"
        android:scaleType="center"
        android:src="@drawable/oklib_btn_back" />

    <TextView
        android:id="@+id/activity_login_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="46dp"
        android:text="@string/login_signin_tv_forgetpwd"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/activity_login_panel_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/activity_forget_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/login_signin_username"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.hwc.oklib.view.EditTextWithDelete
                android:id="@+id/activity_forget_ed_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/activity_forget_tv_username"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/activity_forget_tv_username" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="54dp">

            <TextView
                android:id="@+id/activity_forget_tv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:text="@string/login_signin_npwd_des"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/activity_forget_ed_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/activity_forget_tv_pwd"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/activity_forget_tv_pwd" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="44dp">

            <TextView
                android:id="@+id/activity_forget_tv_code"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical"
                android:text="@string/login_register_code_des"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/activity_forget_ed_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/activity_forget_tv_code"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/activity_forget_tv_code" />

            <com.hwc.oklib.view.RecodeView
                android:id="@+id/activity_forget_get_code"
                android:layout_width="80dp"
                android:layout_height="26dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_white_30"
                android:text="@string/login_register_get_code"
                android:textColor="@color/text_blue"
                android:textSize="12sp"
                app:mode="-1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/white" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/activity_forget_btn_commit"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/selector_white_login_2"
        android:gravity="center"
        android:text="@string/login_findpwd_title"
        android:textColor="@color/text_blue"
        android:textSize="16sp" />

</LinearLayout>